implement the auth

--- a/src/templates/partials/admin_head.html
+++ b/src/templates/partials/admin_head.html
@@ -1,6 +1,6 @@
 <div>
     <div class="bg-gray-200 p-6 rounded-lg mb-8 text-center cursor-pointer" id="header">
-        <h1 class="text-3xl md:text-4xl font-bold mb-4">Android Story Podcast</h1>
+        <h1 class="text-3xl md:text-4xl font-bold mb-4">Podcast admin</h1>
     </div>
     <script>
       document.getElementById('header')
