--- a/src/templates/layouts/admin.html
+++ b/src/templates/layouts/admin.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/htmx.org@2.0.1"></script>
 </head>
 <body class="bg-gray-100 text-gray-900 font-sans">
-{{> head}}
+{{> admin_head}}
 <div class="container max-w-screen-xl mx-auto py-8">
     {{{ content }}}
 </div>
