--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,20 @@ html {
 .selected {
     @apply bg-green-500 text-white;
 }
+
+.input-field {
+    @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight
+}
+
+.htmx-indicator {
+    opacity: 0;
+    transition: opacity 500ms ease-in;
+}
+
+.htmx-request .htmx-indicator {
+    opacity: 1;
+}
+
+.htmx-request.htmx-indicator {
+    opacity: 1;
+}
