--- a/src/templates/pages/admin/dashboard.html
+++ b/src/templates/pages/admin/dashboard.html
@@ -1,3 +1,3 @@
 <div class="container mx-auto p-4">
-    <p>Welcome to dashboard</p>
+    <div hx-get="/admin/podcast" hx-swap="innerHTML" hx-trigger="load"></div>
 </div>
