--- a/src/templates/pages/admin/login.html
+++ b/src/templates/pages/admin/login.html
@@ -4,14 +4,14 @@
             <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
                 Username
             </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+            <input class="input-field focus:outline-none focus:shadow-outline"
                    id="username" name="username" type="text" placeholder="Username" required>
         </div>
         <div class="mb-6">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
                 Password
             </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+            <input class="input-field focus:outline-none focus:shadow-outline"
                    id="password" name="password" type="password" placeholder="******************" required>
         </div>
         <div id="login-form-error"></div>
