--- a/src/templates/pages/admin/admin_podcast_detail.html
+++ b/src/templates/pages/admin/admin_podcast_detail.html
@@ -1,6 +1,6 @@
 <div class="p-6">
     <div>
-        <label for="episode_name" class="block text-gray-700 font-medium text-2xl mb-2">Name</label>
+        <label for="episode_name" class="block text-black font-medium text-2xl mb-2">Name</label>
         <input
                 type="text" id="episode_name" name="episode_name"
                 class="input-field focus:outline-none focus:shadow-outline"
@@ -18,5 +18,9 @@
                 Your browser does not support the audio element.
             </audio>
         </div>
+    </div>
+
+    <div>
+      <h2 class="text-2xl font-medium text-black mb-2">Time codes</h2>  
     </div>
 </div>
