--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    input[type="number"]::-webkit-outer-spin-button,
+    input[type="number"]::-webkit-inner-spin-button {
+        @apply appearance-none;
+        margin: 0;
+    }
+
+    input[type="number"] {
+        @apply appearance-none;
+        -moz-appearance: textfield; /* Firefox */
+    }
+}
+
 html {
     @apply overflow-y-scroll;
 }
