--- a/src/templates/pages/admin/admin_podcast_detail.html
+++ b/src/templates/pages/admin/admin_podcast_detail.html
@@ -1,26 +1,29 @@
 <div class="p-6">
-    <div>
-        <label for="episode_name" class="block text-black font-medium text-2xl mb-2">Name</label>
-        <input
-                type="text" id="episode_name" name="episode_name"
-                class="input-field focus:outline-none focus:shadow-outline"
-                placeholder="Episode name" value="{{title}}"
-                hx-put="/admin/podcast/{{slug}}/update-name"
-                hx-trigger="keyup changed delay:1s"
-                hx-include="[name=episode_name]"
-                hx-swap="none">
-    </div>
+  <div>
+    <label for="episode_name" class="block text-black font-medium text-2xl mb-2">Name</label>
+    <input type="text" id="episode_name" name="episode_name" class="input-field focus:outline-none focus:shadow-outline"
+      placeholder="Episode name" value="{{title}}" hx-put="/admin/podcast/{{slug}}/update-name"
+      hx-trigger="keyup changed delay:1s" hx-include="[name=episode_name]" hx-swap="none">
+  </div>
 
-    <div class="w-full sm:p-0 sm:m-0 mx-auto-2 lg:px-0">
-        <div id="audio-player-container">
-            <audio id="audio-player" controls class="w-full">
-                <source src="{{audioUrl}}" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
-        </div>
+  <div class="w-full sm:p-0 sm:m-0 mx-auto-2 lg:px-0">
+    <div id="audio-player-container">
+      <audio id="audio-player" controls class="w-full">
+        <source src="{{audioUrl}}" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
     </div>
-
-    <div>
-      <h2 class="text-2xl font-medium text-black mb-2">Time codes</h2>  
+  </div>
+  <div>
+    <h2 class="text-2xl">Time codes</h2>
+    <div class="grid grid-cols-1 gap-4 py-2">
+      {{#each timecodes}}
+      {{> editable_time_code}}
+      {{/each}}
     </div>
+    <button
+      class="w-full bg-transparent text-black border border-black px-4 py-2 rounded hover:bg-black hover:text-white">
+      Add time code
+    </button>
+  </div>
 </div>
