--- a/src/templates/partials/editable_time_code.html
+++ b/src/templates/partials/editable_time_code.html
@@ -1,7 +1,9 @@
 <div class="timecode-entry w-full mx-auto flex space-x-2">
-  <input type="number" name="hours" placeholder="HH" min="0" max="23" class="w-16 px-2 py-1 border rounded">
-  <input type="number" name="minutes" placeholder="MM" min="0" max="59" class="w-16 px-2 py-1 border rounded">
-  <input type="number" name="seconds" placeholder="SS" min="0" max="59" class="w-16 px-2 py-1 border rounded">
-  <input type="text" name="text" placeholder="Description" hx-post="/save-text" hx-trigger="change"
+  <input value="{{hour}}" name="hours" placeholder="HH" min="0" max="23" class="w-16 px-2 py-1 border rounded">
+  <input value="{{minute}}" type="number" name="minutes" placeholder="MM" min="0" max="59"
+    class="w-16 px-2 py-1 border rounded">
+  <input value="{{second}}" type="number" name="seconds" placeholder="SS" min="0" max="59"
+    class="w-16 px-2 py-1 border rounded">
+  <input value="{{description}}"type="text" name="text" placeholder="Description" hx-post="/save-text" hx-trigger="change"
     hx-include="closest .timecode-entry" class="flex-1 px-2 py-1 border rounded">
 </div>
