--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,13 @@
         @apply appearance-none;
         -moz-appearance: textfield; /* Firefox */
     }
+
+    input:focus {
+        @apply border-black;
+    }
+    input {
+        @apply text-black;
+    }
 }
 
 html {
@@ -24,18 +31,6 @@ html {
 }
 
 .input-field {
-    @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight
+    @apply rounded py-2 px-3 leading-tight 
 }
 
-.htmx-indicator {
-    opacity: 0;
-    transition: opacity 500ms ease-in;
-}
-
-.htmx-request .htmx-indicator {
-    opacity: 1;
-}
-
-.htmx-request.htmx-indicator {
-    opacity: 1;
-}
