--- a/src/templates/pages/admin/admin_podcast_detail.html
+++ b/src/templates/pages/admin/admin_podcast_detail.html
@@ -1,10 +1,9 @@
 <div class="p-6">
   <div>
     <label for="episode_name" class="block text-black font-medium text-2xl mb-2">Name</label>
-    <input type="text" id="episode_name" name="episode_name"
-      class="input-field w-full" placeholder="Episode name" value="{{title}}"
-      hx-put="/admin/podcast/{{slug}}/update-name" hx-trigger="keyup changed delay:1s" hx-include="[name=episode_name]"
-      hx-swap="none">
+    <input type="text" id="episode_name" name="episode_name" class="input-field w-full" placeholder="Episode name"
+      value="{{title}}" hx-put="/admin/podcast/{{slug}}/update-name" hx-trigger="keyup changed delay:1s"
+      hx-include="[name=episode_name]" hx-swap="none">
   </div>
 
   <div class="w-full sm:p-0 sm:m-0 mx-auto-2 lg:px-0">
@@ -17,12 +16,12 @@
   </div>
   <div>
     <h2 class="text-2xl">Time codes</h2>
-    <div class="grid grid-cols-1 gap-4 py-2">
+    <div id="timecodes-list" class="grid grid-cols-1 gap-4 py-2">
       {{#each timecodes}}
       {{> editable_time_code}}
       {{/each}}
     </div>
-    <button
+    <button hx-target="#timecodes-list" hx-swap="beforeend" hx-post="/admin/podcast/{{slug}}/add-timecode"
       class="w-full bg-transparent text-black border border-black px-4 py-2 rounded hover:bg-black hover:text-white">
       Add time code
     </button>
