add links edit flow

--- a/src/templates/layouts/admin.html
+++ b/src/templates/layouts/admin.html
@@ -1,15 +1,18 @@
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Android story podcast</title>
-    <link href="/public/styles.css" rel="stylesheet">
-    <script src="https://unpkg.com/htmx.org@2.0.1"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Android story podcast</title>
+  <link href="/public/styles.css" rel="stylesheet">
+  <script src="https://unpkg.com/htmx.org@2.0.1"></script>
 </head>
+
 <body class="bg-gray-100 text-gray-900 font-sans">
-{{> admin_head}}
-<div class="container max-w-screen-xl mx-auto py-8">
+  {{> admin_head}}
+  <div class="container max-w-screen-xl mx-auto">
     {{{ content }}}
-</div>
+  </div>
 </body>
+
 </html>
