--- a/src/templates/pages/admin/admin_podcast_detail.html
+++ b/src/templates/pages/admin/admin_podcast_detail.html
@@ -26,4 +26,16 @@
       Add time code
     </button>
   </div>
+  <div>
+    <h2 class="text-2xl">Links</h2>
+    <div id="links-list" class="grid grid-cols-1 gap-4 py-2">
+      {{#each links}}
+      {{> editable_link}}
+      {{/each}}
+    </div>
+    <button hx-target="#links-list" hx-swap="beforeend" hx-post="/admin/podcast/{{slug}}/add-link"
+      class="w-full bg-transparent text-black border border-black px-4 py-2 rounded hover:bg-black hover:text-white">
+      Add link
+    </button>
+  </div>
 </div>
