--- a/src/templates/pages/admin/admin_podcast_detail.html
+++ b/src/templates/pages/admin/admin_podcast_detail.html
@@ -38,4 +38,8 @@
       Add link
     </button>
   </div>
+  <div>
+    <h2 class="text-2xl border">Preview episode</h2>
+    <div hx-get="/podcast/{{slug}}?preview=true" hx-swap="innerHTML" hx-trigger="update-preview from:body"></div>
+  </div>
 </div>
