--- a/src/templates/pages/admin/admin_podcast_detail.html
+++ b/src/templates/pages/admin/admin_podcast_detail.html
@@ -2,7 +2,7 @@
   <div>
     <label for="episode_name" class="block text-black font-medium text-2xl mb-2">Name</label>
     <input type="text" id="episode_name" name="episode_name" class="input-field w-full" placeholder="Episode name"
-      value="{{title}}" hx-put="/admin/podcast/{{slug}}/update-name" hx-trigger="keyup changed delay:1s"
+      value="{{title}}" hx-put="/admin/podcast/{{slug}}/update-name" hx-trigger="keyup changed delay:500ms"
       hx-include="[name=episode_name]" hx-swap="none">
   </div>
 
@@ -40,6 +40,6 @@
   </div>
   <div>
     <h2 class="text-2xl border">Preview episode</h2>
-    <div hx-get="/podcast/{{slug}}?preview=true" hx-swap="innerHTML" hx-trigger="update-preview from:body"></div>
+    <div hx-get="/podcast/{{slug}}?preview=true" hx-swap="innerHTML" hx-trigger="update-preview from:body, load"></div>
   </div>
 </div>
