--- a/src/templates/pages/admin/youtube_text.html
+++ b/src/templates/pages/admin/youtube_text.html
@@ -1,5 +1,10 @@
-<div class="border border-2 border-black">
-  <div class="m-2">
-    <p style="white-space: pre-wrap;">{{text}}</p>
+<div>
+  <div class="my-2">
+    <h2 class="text-xl">Public text</h2>
+    <p class="border border-2 border-black p-2" style="white-space: pre-wrap;">{{public_text}}</p>
+  </div>
+  <div class="my-2">
+    <h2 class="text-xl">Patreon text</h2>
+    <p class="border border-2 border-black p-2" style="white-space: pre-wrap;">{{patreon_text}}</p>
   </div>
 </div>
