--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -734,6 +734,10 @@ input {
   height: 100%;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -752,6 +756,10 @@ input {
 
 .w-full {
   width: 100%;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .max-w-screen-xl {
