--- a/src/templates/partials/editable_time_code.html
+++ b/src/templates/partials/editable_time_code.html
@@ -2,13 +2,16 @@
   <input value="{{hour}}" name="hours" placeholder="HH" min="0" max="23" hx-trigger="keyup changed delay:500ms"
     hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none" hx-include="closest .timecode-entry"
     class="w-16 px-2 py-1 border rounded">
-  <input value="{{minute}}" type="number" name="minutes" placeholder="MM" min="0" max="59" hx-trigger="keyup changed delay:500ms"
-    hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none" hx-include="closest .timecode-entry"
-    class="w-16 px-2 py-1 border rounded">
-  <input value="{{second}}" type="number" name="seconds" placeholder="SS" min="0" max="59" hx-trigger="keyup changed delay:500ms"
-    hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none" hx-include="closest .timecode-entry"
-    class="w-16 px-2 py-1 border rounded">
-  <input value="{{description}}" type="text" name="text" placeholder="Description" hx-trigger="keyup changed delay:500ms"
-    hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none" hx-include="closest .timecode-entry"
-    class="flex-1 px-2 py-1 border focus:border-black rounded">
+  <input value="{{minute}}" type="number" name="minutes" placeholder="MM" min="0" max="59"
+    hx-trigger="keyup changed delay:500ms" hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none"
+    hx-include="closest .timecode-entry" class="w-16 px-2 py-1 border rounded">
+  <input value="{{second}}" type="number" name="seconds" placeholder="SS" min="0" max="59"
+    hx-trigger="keyup changed delay:500ms" hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none"
+    hx-include="closest .timecode-entry" class="w-16 px-2 py-1 border rounded">
+  <input value="{{description}}" type="text" name="text" placeholder="Description"
+    hx-trigger="keyup changed delay:500ms" hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none"
+    hx-include="closest .timecode-entry" class="flex-1 px-2 py-1 border focus:border-black rounded">
+  <input type="checkbox" name="isPublic" class="w-5 h-5" {{#if isPublic}}checked{{/if}}
+    hx-trigger="change" hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none"
+    hx-include="closest .timecode-entry">
 </div>
