add base for future ffmpeg processor

--- a/src/templates/pages/admin/admin_podcast_detail.html
+++ b/src/templates/pages/admin/admin_podcast_detail.html
@@ -13,6 +13,14 @@
         Your browser does not support the audio element.
       </audio>
     </div>
+
+    <div id="audio-player-container">
+      <audio id="audio-player" controls class="w-full">
+        <source src="{{audioUrl_2}}" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </div>
+
   </div>
   <div class="my-4">
     <h2 class="text-2xl">Time codes</h2>
