Add host handle for public page

--- a/src/templates/layouts/layout.html
+++ b/src/templates/layouts/layout.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Android story podcast</title>
+  <title>{{showName}}</title>
   <link href="/public/styles.css" rel="stylesheet">
   <script src="https://unpkg.com/htmx.org@2.0.1"></script>
 </head>
