--- a/src/templates/partials/editable_time_code.html
+++ b/src/templates/partials/editable_time_code.html
@@ -11,7 +11,6 @@
   <input value="{{description}}" type="text" name="text" placeholder="Description"
     hx-trigger="keyup changed delay:500ms" hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none"
     hx-include="closest .timecode-entry" class="flex-1 px-2 py-1 border focus:border-black rounded">
-  <input type="checkbox" name="isPublic" class="w-5 h-5" {{#if isPublic}}checked{{/if}}
-    hx-trigger="change" hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none"
-    hx-include="closest .timecode-entry">
+  <input type="checkbox" name="isPublic" class="w-5 h-5" {{#if isPublic}}checked{{/if}} hx-trigger="change"
+    hx-put="/admin/podcast/{{slug}}/timecodes/{{index}}" hx-swap="none" hx-include="closest .timecode-entry">
 </div>
