--- a/src/templates/pages/admin/dashboard.html
+++ b/src/templates/pages/admin/dashboard.html
@@ -1,3 +1,11 @@
-<div class="container mx-auto p-4">
-  <div hx-get="/admin/podcast" hx-swap="innerHTML" hx-trigger="load"></div>
+<div class="container mx-auto p-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+  {{#each shows}}
+  <a href="{{url}}" class="no-underline bg-white p-4 rounded shadow-md">
+    <div class="relative w-full aspect-square">
+      <img src="https://androidstory.dev/files/logo.jpg" alt="Android story logo"
+        class="w-full h-full object-cover rounded-t-md">
+    </div>
+    <h2 class="text-xl font-bold mt-4 line-clamp-3">{{showName}}</h2>
+  </a>
+  {{/each}}
 </div>
