--- a/src/templates/pages/podcastDetails.html
+++ b/src/templates/pages/podcastDetails.html
@@ -1,7 +1,7 @@
 <div>
     <div class="flex flex-col md:flex-row w-full">
         <div class="hidden md:block md:w-3/10">
-            <img src="https://androidstory.dev/files/logo.jpg" alt="Logo" class="w-64 aspect-square">
+            <img src="{{imageUrl}}" alt="Logo" class="w-64 aspect-square">
         </div>
         <div class="w-full md:w-7/10 bg-random2 p-4">
             <h2 class="text-xl font-bold mb-2 text-green-500">{{ title }}</h2>
