--- a/src/templates/partials/buttons/build_audio.html
+++ b/src/templates/partials/buttons/build_audio.html
@@ -1,4 +1,4 @@
-<button hx-swap="outerHTML" hx-post="/admin/podcast/{{slug}}/update-files"
+<button hx-swap="outerHTML" hx-post="/admin/show/{{showSlug}}/episode/{{episodeSlug}}/update-files"
   class="common-button w-full px-4 py-2 my-2 transition-all duration-300 ease-in-out" {{#if
   isAudioBuildInProgress}}disabled{{/if}}>
   Build audio files
