add muly podcast feature

--- a/src/templates/pages/admin/dashboard.html
+++ b/src/templates/pages/admin/dashboard.html
@@ -2,7 +2,7 @@
   {{#each shows}}
   <a href="{{url}}" class="no-underline bg-white p-4 rounded shadow-md">
     <div class="relative w-full aspect-square">
-      <img src="https://androidstory.dev/files/logo.jpg" alt="Android story logo"
+      <img src="{{showLogoUrl}}" alt="Podcast logo"
         class="w-full h-full object-cover rounded-t-md">
     </div>
     <h2 class="text-xl font-bold mt-4 line-clamp-3">{{showName}}</h2>
