--- a/src/templates/pages/podcastList.html
+++ b/src/templates/pages/podcastList.html
@@ -2,7 +2,7 @@
     {{#each posts}}
     <a href="{{url}}" class="no-underline bg-white p-4 rounded shadow-md">
         <div class="relative w-full aspect-square">
-            <img src="{{imageUrl}}" alt="Android story logo"
+            <img src="{{imageUrl}}" alt="Podcast logo"
                  class="w-full h-full object-cover rounded-t-md {{#if (eq type 'patreon')}}filter blur-md{{/if}}">
             {{#if (eq type 'patreon')}}
             <div class="absolute inset-0 flex justify-center items-center">
