--- a/src/templates/pages/admin/admin_podcast_list.html
+++ b/src/templates/pages/admin/admin_podcast_list.html
@@ -1,3 +1,5 @@
+{{> btn_create_podcast createPodcastButton}}
+
 <div class="grid grid-cols-1 gap-4">
   {{#each posts}}
   <a href="{{detailUrl}}" class="no-underline bg-white p-8 rounded shadow-md">
