--- a/src/templates/pages/podcastDetails.html
+++ b/src/templates/pages/podcastDetails.html
@@ -1,6 +1,6 @@
 <div>
     <div class="flex flex-col md:flex-row w-full">
-        <div class="hidden md:block md:w-3/10">
+        <div class="hidden md:block md:w-3/10 py-2">
             <img src="{{imageUrl}}" alt="Logo" class="w-64 aspect-square">
         </div>
         <div class="w-full md:w-7/10 bg-random2 p-4">
