--- a/src/templates/widgets/btn_create_podcast.html
+++ b/src/templates/widgets/btn_create_podcast.html
@@ -1,4 +1,8 @@
-<button hx-swap="#dialog-container" hx-post="/admin/show/{{showSlug}}/episode-new"
-  class="common-button w-full px-4 py-2 my-2 transition-all duration-300 ease-in-out">
-  {{title}}
-</button>
+<div class="flex flex-col">
+  <input type="text" id="episodeName" name="episodeName" class="max-full px-2 py-1 border focus:border-black rounded"
+    placeholder="Enter episode name" />
+  <button hx-post="/admin/show/{{showSlug}}/episode" hx-include="[name=episodeName]" hx-target="#adminPodcastList"
+    class="common-button w-full px-4 py-2 my-2 transition-all duration-300 ease-in-out">
+    {{title}}
+  </button>
+</div>
