--- a/src/templates/partials/admin_head.html
+++ b/src/templates/partials/admin_head.html
@@ -1,11 +1,13 @@
 <div>
-    <div class="bg-gray-200 p-6 rounded-lg text-center cursor-pointer" id="header">
-        <h1 class="text-3xl md:text-4xl font-bold mb-4">Podcast admin</h1>
-    </div>
-    <script>
-      document.getElementById('header')
-        .addEventListener('click', function () {
-          window.location.href = '/admin/dashboard';
-        });
-    </script>
+  <div
+    class="bg-gray-200 p-6 rounded-lg text-center cursor-pointer"
+    id="header"
+  >
+    <h1 class="text-3xl md:text-4xl font-bold mb-4">Podcast admin</h1>
+  </div>
+  <script>
+    document.getElementById("header").addEventListener("click", function () {
+      window.location.href = "/admin/dashboard";
+    });
+  </script>
 </div>
