--- a/src/templates/pages/admin/login.html
+++ b/src/templates/pages/admin/login.html
@@ -1,25 +1,44 @@
 <div class="container mx-auto p-4">
-    <form hx-post="/login" hx-target="#login-form-error" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-        <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-                Username
-            </label>
-            <input class="input-field focus:outline-none focus:shadow-outline"
-                   id="username" name="username" type="text" placeholder="Username" required>
-        </div>
-        <div class="mb-6">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-                Password
-            </label>
-            <input class="input-field focus:outline-none focus:shadow-outline"
-                   id="password" name="password" type="password" placeholder="******************" required>
-        </div>
-        <div id="login-form-error"></div>
-        <div class="flex items-center justify-between">
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    type="submit">
-                Sign In
-            </button>
-        </div>
-    </form>
+  <form
+    hx-post="/login"
+    hx-target="#login-form-error"
+    class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
+  >
+    <div class="mb-4">
+      <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+        Username
+      </label>
+      <input
+        class="input-field focus:outline-none focus:shadow-outline"
+        id="username"
+        name="username"
+        type="text"
+        placeholder="Username"
+        required
+      />
+    </div>
+    <div class="mb-6">
+      <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+        Password
+      </label>
+      <input
+        class="input-field focus:outline-none focus:shadow-outline"
+        id="password"
+        name="password"
+        type="password"
+        placeholder="******************"
+        required
+      />
+    </div>
+    <div id="login-form-error"></div>
+    <div class="flex items-center justify-between">
+      <button
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+        type="submit"
+      >
+        Sign In
+      </button>
+    </div>
+  </form>
 </div>
+
